--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -13,3 +13,8 @@ Change Log
 0.0.3 (17/1/2022)
 -------------------
 - Fixed and modified how encryption key is generated
+
+0.0.4 (28/1/2022)
+-------------------
+- UI update
+- v0.0.4 final
